# secondbrain

./: License  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs
.github/workflows/: macos-release.yml  main.yml
src/: app.html  app.postcss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/configs/: models.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  configs.rs  downloader.rs  language_model.rs  localstore.rs  main.rs
src/lib/: ChatWindow.svelte  MessageBlock.svelte  commands.ts  llm.ts  local_store.ts  toasts.ts  types.ts  utils.ts
src/lib/components/: Breathing.svelte  ChatInput.svelte  ChatWindow.svelte  LanguageModelRow.svelte  MessageBlock.svelte  SideMenu.svelte
src/lib/components/icons/: IconChat.svelte  IconDocuments.svelte  IconModel.svelte  IconModelSettings.svelte  IconQA.svelte  IconSettings.svelte
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/chat/: +page.svelte
src/routes/config/: +page.svelte
src/routes/models/: +page.svelte
src/routes/own_documents/: +page.svelte
src/routes/parameters/: +page.svelte
src/routes/qa/: +page.svelte
src/routes/settings/: +page.svelte
